# frida-course

./: .gitignore  README.md  build-demo.sh  meson.build
.devcontainer/: devcontainer.json
demos/S01/: meson.build
demos/S01/app/: .gitignore  build.sh  hello.vala  meson.build
demos/S01/core-example/: .gitignore  frida-core-example.c  meson.build
subprojects/: frida-core.wrap
subprojects/options/: main.vala  meson.build  meson_options.txt
